# swagger.json
@@ -1,20 +1,19 @@
-{
+
+
+
+  {
     "swagger": "2.0",
     "info": {
       "version": "1.0.0",
-      "title": "My User Project CRUD",
-      "description": "My User Project Application API"
+      "title": "Transaction",
+      "description": "Transaction"
     },
-    "host": "localhost:8000",
+    "host": "localhost:5000",
     "basePath": "/",
     "tags": [
       {
-        "name": "Users",
-        "description": "API for users in the system"
-      },
-      {
-        "name": "Pay",
-        "description": "API for users in the system"
+        "name": "Transaction",
+        "description": "API Transaction"
       }
     ],
     "schemes": [
@@ -27,77 +26,70 @@
       "application/json"
     ],
     "paths": {
-      "/addUser": {
-        "post": {
-          "tags": [
-            "Users"
-          ],
-          "description": "Create new user in system",
-          "parameters": [
+      "/api/transaction/get-balance?id":{
+        "get":{
+          "tags":["Transaction"],
+          "description": "Метод получения текущего баланса пользователя. Принимает id пользователя.",
+          "parameters":[
             {
-              "name": "user",
-              "in": "body",
-              "description": "User that we want to create",
+              "in":"query",
+              "name": "id",
               "schema": {
-                "$ref": "#/definitions/User"
-              }
+                "type": "string"
+              },
+              "description": "id пользователя"
             }
-          ],
-          "produces": [
-            "application/json"
           ],
           "responses": {
             "200": {
-              "description": "New user is created",
+              "description": "OK",
               "schema": {
-                "$ref": "#/definitions/User"
+                "$ref": "#/definitions/balance"
               }
             }
           }
-        } 
+        }
       },
-
-      "/users": {
-        "get": {
-            "tags": [
-              "Users"
-            ],
-            "summary": "Get all users in system",
-            "responses": {
-              "200": {
-                "description": "OK",
-                "schema": {
-                  "$ref": "#/definitions/Users"
+      "/api/transaction/get-history?id":{
+        "get":{
+          "tags":["Transaction"],
+          "description": "Метод получения списка транзакций. Принимает id пользователя.",
+          "parameters":[
+            {
+              "in":"query",
+              "name": "id",
+              "schema": {
+                "type": "string"
+              },
+              "description": "id пользователя"
+            }
+          ],
+          "responses": {
+            "200": {
+              "description": "OK",
+              "schema": {
+                "$ref": "#/definitions/balance"
+              }
+            }
+          }
+        }
+      },
+      "/api/transaction/change-balance":{
+        "post":{
+          "tags":["Transaction"],
+          "description": "Метод списания/начисления средств с баланса. Принимает id пользователя и сколько средств зачислить.",
+          "parameters":[
+            {
+              "in":"body",
+              "name": "change-balance",
+              "schema": {
+                "type": "object",
+                "items": {
+                  "id": "string",
+                  "sum": "integer"
                 }
-              }
-            }
-          }
-      },
-      "/user/{id}": {
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "description": "ID of user that we want to find",
-            "type": "integer"
-          }
-        ]
-      },
-      "/addPay": {
-        "post": {
-          "tags": [
-            "Pay"
-          ],
-          "description": "Create new Pay in system",
-          "parameters": [
-            {
-              "name": "Pay",
-              "in": "body",
-              "description": "User that we want to create",
-              "schema": {
-                "$ref": "#/definitions/User"
-              }
+              },
+              "description": "id пользователя"
             }
           ],
           "produces": [
@@ -105,103 +97,36 @@
           ],
           "responses": {
             "200": {
-              "description": "New user is created",
+              "description": "OK",
               "schema": {
-                "$ref": "#/definitions/User"
+                "$ref": "#/definitions/balance"
               }
             }
           }
-        } 
-      }
-    },
-
-    
+        }
+      },
+  
+  
     "definitions": {
-      "User": {
-        "required": [
-          "name",
-          "_id",
-          "companies"
-        ],
-        "properties": {
-          "_id": {
-            "type": "integer",
-            "uniqueItems": true
-          },
-          "isPublic": {
-            "type": "boolean"
-          },
-          "name": {
-            "type": "string"
-          },
-          "books": {
+      "balance":{
+        "properties":{
+          "balance": "integer",
+          "currency": "string",
+          "history": {
             "type": "array",
-            "items": {
-                "type": "object",
-                "properties": {
-                  "name": {
-                    "type": "string"
-                  },
-                  "amount": {
-                    "type": "number"
-                  }
-                }
+            "items":{
+              "type": "object",
+              "date": "string",
+              "balance": "integer"
             }
-                
-          },
-          "companies": {
-            "type": "array",
-            "items": {
-                "type": "string"      
-            }
-                
           }
-         
         }
-      },
-      "updateUser": {
-        "required": [
-          "name",
-          "companies"
-        ],
-        "properties": {
-          "isPublic": {
-            "type": "boolean"
-          },
-          "name": {
-            "type": "string"
-          },
-          "books": {
-            "type": "array",
-            "items": {
-                "type": "object",
-                "properties": {
-                  "name": {
-                    "type": "string"
-                  },
-                  "amount": {
-                    "type": "number"
-                  }
-                }
-            }
-                
-          },
-          "companies": {
-            "type": "array",
-            "items": {
-                "type": "string"      
-            }
-                
-          }
-         
-        }
-      },
-      "Users": {
-        "type": "array",
-        "$ref": "#/definitions/User"
       }
-     
     }
   }
+  }  
 
-  
+
+
+
+
